<resources>
    <string name="app_name">Prime Numbers</string>
    <string name="language">English</string>
    <string name="toast">Language set to English</string>
    <string name="definition">A prime number is a number
                            greater than 1 that is divisible
                            only by 1 and the number itself</string>
    <string name="range_error">The starting position cannot be
                            less than ending position</string>
    <string name="negative_error">The starting position must be positive</string>
    <string name="text">Define the range:</string>
    <string name="from">Start</string>
    <string name="to">End</string>
    <string name="output">Output</string>
    <string name="calculate">Calculate prime numbers</string>
    <string name="display">Numbers will be displayed here</string>
    <string name="not_found">No prime numbers were found in given range: </string>
    <string name="found">Prime numbers found in range </string>
    <string name="copy">Copy to clipboard</string>
    <string name="toast_clipboard">Copied to clipboard</string>
    <string name="divisor_definition">A divisor is a number that divides another number evenly</string>
    <string name="enter_number">Enter the number:</string>
    <string name="calculate_divisors">Calculate divisors</string>
    <string name="is_prime"> is a prime number</string>
    <string name="is_not_prime"> is not a prime number</string>
    <string name="divisors_result">Found divisors:</string>
    <string name="primes">Find prime numbers</string>
    <string name="divisors">Find divisors</string>
    <string name="language_bxr">Буряад</string>
    <string name="toast_bxr">Буряад руу шэлжэбэ</string>
    <string name="definition_bxr">Юрэнхы тоо гээшэ 1-һээ ехэ,
                            гансал 1-дэ хубаагдаха ба тоо өөрөө</string>
    <string name="range_error_bxr">Эхинэй байра түгэсхэлэй байраһаа бага байжа болохогүй</string>
    <string name="negative_error_bxr">Эхинэй байра эерэг байха ёһотой</string>
    <string name="text_bxr">Yргэлжэлэл тодорхойлхо:</string>
    <string name="from_bxr">Эхилэл</string>
    <string name="to_bxr">Түгэсхэл</string>
    <string name="output_bxr">Гаралта</string>
    <string name="calculate_bxr">Юрын тоонуудые тоолохо</string>
    <string name="display_bxr">Тоонууд эндэ харуулагдаха</string>
    <string name="not_found_bxr">Үгтэһэн үргэлжэлэл соо юрын тоонууд олдоогүй: </string>
    <string name="found_bxr">Үргэлжэлэл соо олоһон юрын тоонууд  </string>
    <string name="copy_bxr">Буфертэ хуулбарилха</string>
    <string name="toast_clipboard_bxr">Буфертэ хуулагдаһан</string>
    <string name="denominator_definition_bxr">Хубаагша гээшэ ондоо тоое тэгшэ хубааха тоо юм</string>
    <string name="enter_number_bxr">Тоо бэшэгты:</string>
    <string name="calculate_divisors_bxr">Хубаагша тоолохо</string>
    <string name="is_prime_bxr"> юрын тоо байна</string>
    <string name="is_not_prime_bxr"> юрын тоо бэшэ</string>
    <string name="divisors_result_bxr">Хубаагшадые олоһон байна:</string>
    <string name="primes_bxr">Юрын тоонуудые бэдэрхэ</string>
    <string name="divisors_bxr">Хубаагшануудые бэдэрхэ</string>
    <string name="language_esp">Español</string>
    <string name="toast_esp">Idioma cambiado a Español</string>
    <string name="definition_esp">Un número primo es un número
                            mayor que 1 que solo es divisible
                            por 1 y por sí mismo</string>
    <string name="range_error_esp">La posición inicial no puede ser
                            menor que la posición final</string>
    <string name="negative_error_esp">La posición inicial debe ser positiva</string>
    <string name="text_esp">Define el rango:</string>
    <string name="from_esp">Inicio</string>
    <string name="to_esp">Fin</string>
    <string name="output_esp">Salida</string>
    <string name="calculate_esp">Calcular números primos</string>
    <string name="display_esp">Los números se mostrarán aquí</string>
    <string name="not_found_esp">No se encontraron números primos en el rango dado: </string>
    <string name="found_esp">Números primos encontrados en el rango </string>
    <string name="copy_esp">Copiar al portapapeles</string>
    <string name="toast_clipboard_esp">Copiado al portapapeles</string>
    <string name="divisor_definition_esp">Un divisor es un número que divide a otro número de manera exacta</string>
    <string name="enter_number_esp">Ingrese el número:</string>
    <string name="calculate_divisors_esp">Calcular divisores</string>
    <string name="is_prime_esp"> es un número primo</string>
    <string name="is_not_prime_esp"> no es un número primo</string>
    <string name="divisors_result_esp">Divisores encontrados:</string>
    <string name="primes_esp">Encontrar números primos</string>
    <string name="divisors_esp">Encontrar divisores</string>
    <string name="language_et">አማርኛ</string>
    <string name="toast_et">ቋንቋ ወደ አማርኛ ተሰየም</string>
    <string name="definition_et">የተመረጠ ቁጥር ከ1 የበለጠ ሆኖ
                            በ1 እና በራሱ ብቻ የሚከፈል ቁጥር ነው</string>
    <string name="range_error_et">የመጀመሪያው ቦታ ከመጨረሻው ቦታ
                            ያነሰ ሊሆን አይችልም</string>
    <string name="negative_error_et">የመጀመሪያው ቦታ አዎንታዊ ሊሆን አለበት</string>
    <string name="text_et">ክልሉን ይሰይሙ:</string>
    <string name="from_et">መጀመሪያ</string>
    <string name="to_et">መጨረሻ</string>
    <string name="output_et">ውጤት</string>
    <string name="calculate_et">የተመረጠ ቁጥር ይስላ</string>
    <string name="display_et">ቁጥሮቹ እዚህ ይታያሉ</string>
    <string name="not_found_et">በተሰየመው ክልል ምንም የተመረጠ ቁጥር አልተገኘም፡ </string>
    <string name="found_et">በክልሉ የተገኙ የተመረጠ ቁጥሮች </string>
    <string name="copy_et">ወደ ቅንጥብ ሰሌዳ ቅዳ</string>
    <string name="toast_clipboard_et">ወደ ቅንጥብ ሰሌዳ ተቀድቷል</string>
    <string name="divisor_definition_et">አንድ አንደኛ ቁጥር ሌላ ቁጥርን በትክክል ይከፍላል</string>
    <string name="enter_number_et">ቁጥር ይግቡ:</string>
    <string name="calculate_divisors_et">አንደኛ ቁጥሮችን ይቀመጡ</string>
    <string name="is_prime_et"> ይህ የተመረጡ ቁጥር ነው</string>
    <string name="is_not_prime_et"> ይህ የተመረጡ ቁጥር አይደለም</string>
    <string name="divisors_result_et">የተገኙ አንደኛ ቁጥሮች:</string>
    <string name="primes_et">ቅድሚ ቁጥሮችን አስተውሉ</string>
    <string name="divisors_et">ክፍተቶችን አስተውሉ</string>
    <string name="language_kg">Кыргызча</string>
    <string name="toast_kg">Тил кыргызчага өзгөртүлдү</string>
    <string name="definition_kg">Жөнөкөй сан – бул 1ге жана өзүнө гана бөлүнгөн, 1ден чоң сан</string>
    <string name="range_error_kg">Баштапкы позиция аяктоо позициясынан кичине болбошу керек</string>
    <string name="negative_error_kg">Баштапкы позиция оң сан болушу керек</string>
    <string name="text_kg">Аралыкты аныктаңыз:</string>
    <string name="from_kg">Баштоо</string>
    <string name="to_kg">Аяктоо</string>
    <string name="output_kg">Натыйжа</string>
    <string name="calculate_kg">Жөнөкөй сандарды эсептөө</string>
    <string name="display_kg">Сандар бул жерде көрсөтүлөт</string>
    <string name="not_found_kg">Берилген диапазондо жөнөкөй сандар табылган жок: </string>
    <string name="found_kg">Диапазондо табылган жөнөкөй сандар </string>
    <string name="copy_kg">Буферге көчүрүү</string>
    <string name="toast_clipboard_kg">Буферге көчүрүлдү</string>
    <string name="divisor_definition_kg">Бөлгүч – бул башка санды так бөлгөн сан</string>
    <string name="enter_number_kg">Санды киргизиңиз:</string>
    <string name="calculate_divisors_kg">Бөлгүчтөрдү эсептөө</string>
    <string name="is_prime_kg"> бул жөнөкөй сан</string>
    <string name="is_not_prime_kg"> бул жөнөкөй сан эмес</string>
    <string name="divisors_result_kg">Табылган бөлгүчтөр:</string>
    <string name="primes_kg">Баштапкы сандарды табуу</string>
    <string name="divisors_kg">Бөлгүчтөрдү табуу</string>
    <string name="language_mm">မြန်မာ</string>
    <string name="toast_mm">ဘာသာစကားကို မြန်မာသို့ ပြောင်းပြီးပါပြီ</string>
    <string name="definition_mm">သင်္ချာဂဏန်းတစ်ခုသည် ၁ ထက်ကြီးပြီး
                            ၁ နှင့် မိမိကိုယ်ကိုသာစားလို့ရသော ဂဏန်းဖြစ်သည်</string>
    <string name="range_error_mm">အစရာနေရာသည် အဆုံးနေရာထက်
                            ပိုငယ်၍မဖြစ်နိုင်ပါ</string>
    <string name="negative_error_mm">အစရာနေရာသည် သုညထက်ကြီးရမည်</string>
    <string name="text_mm">အပိုင်းအခြား သတ်မှတ်ပါ:</string>
    <string name="from_mm">စတင်</string>
    <string name="to_mm">အဆုံး</string>
    <string name="output_mm">ရလာဒ်</string>
    <string name="calculate_mm">သင်္ချာဂဏန်းများတွက်ချက်မည်</string>
    <string name="display_mm">ဂဏန်းများကို ဤနေရာတွင် ပြသမည်</string>
    <string name="not_found_mm">ပေးထားသော အပိုင်းအခြားတွင် သင်္ချာဂဏန်းများ ရှာမတွေ့ပါ: </string>
    <string name="found_mm">ပေးထားသော အပိုင်းအခြားတွင် တွေ့ရှိသော သင်္ချာဂဏန်းများ </string>
    <string name="copy_mm">ကလစ်ဘုတ်သို့ ကူးယူပါ။</string>
    <string name="toast_clipboard_mm">ကလစ်ဘုတ်သို့ ကူးယူထားသည်။</string>
    <string name="divisor_definition_mm">တစ်ခုတည်းသောအရေအတွက်ကို တိကျစွာခွဲခြားနိုင်သောအရေအတွက်</string>
    <string name="enter_number_mm">အရေအတွက်ထည့်ပါ:</string>
    <string name="calculate_divisors_mm">ခွဲခြားသူများကိုတွက်ချက်ပါ</string>
    <string name="is_prime_mm"> ဤသည်မှာပုဂ္ဂိုလ်ဆန်းအရေအတွက်ဖြစ်သည်</string>
    <string name="is_not_prime_mm"> ဤသည်မှာပုဂ္ဂိုလ်ဆန်းအရေအတွက်မဟုတ်ပါ</string>
    <string name="divisors_result_mm">တွေ့ရှိသောခွဲခြားသူများ:</string>
    <string name="primes_mm">ပိုင်ဆိုင်သည့်အရေအတွက်များကိုရှာပါ</string>
    <string name="divisors_mm">ခွဲမည့်အမှတ်များကိုရှာပါ</string>
    <string name="language_ru">Русский</string>
    <string name="toast_ru">Язык изменен на Русский</string>
    <string name="definition_ru">Простое число — это число,
                            большее 1, которое делится
                            только на 1 и само себя</string>
    <string name="range_error_ru">Начальная позиция не может быть
                            меньше конечной позиции</string>
    <string name="negative_error_ru">Начальная позиция должна быть положительной</string>
    <string name="text_ru">Определите диапазон:</string>
    <string name="from_ru">Начало</string>
    <string name="to_ru">Конец</string>
    <string name="output_ru">Вывод</string>
    <string name="calculate_ru">Вычислить простые числа</string>
    <string name="display_ru">Числа будут отображены здесь</string>
    <string name="not_found_ru">Простые числа в указанном диапазоне не найдены: </string>
    <string name="found_ru">Найденные простые числа в диапазоне </string>
    <string name="copy_ru">Скопировать в буфер обмена</string>
    <string name="toast_clipboard_ru">Скопировано в буфер обмена</string>
    <string name="divisor_definition_ru">Делитель — это число, которое нацело делит другое число</string>
    <string name="enter_number_ru">Введите число:</string>
    <string name="calculate_divisors_ru">Вычислить делители</string>
    <string name="is_prime_ru"> - простое число</string>
    <string name="is_not_prime_ru"> - не простое число</string>
    <string name="divisors_result_ru">Найденные делители:</string>
    <string name="primes_ru">Найти простые числа</string>
    <string name="divisors_ru">Найти делители</string>
    <string name="language_vn">Tiếng Việt</string>
    <string name="toast_vn">Đã thay đổi ngôn ngữ thành Tiếng Việt</string>
    <string name="definition_vn">Số nguyên tố là số lớn hơn 1
                            và chỉ chia hết cho 1 và chính nó</string>
    <string name="range_error_vn">Vị trí bắt đầu không thể nhỏ hơn
                            vị trí kết thúc</string>
    <string name="negative_error_vn">Vị trí bắt đầu phải là số dương</string>
    <string name="text_vn">Xác định phạm vi:</string>
    <string name="from_vn">Bắt đầu</string>
    <string name="to_vn">Kết thúc</string>
    <string name="output_vn">Kết quả</string>
    <string name="calculate_vn">Tính số nguyên tố</string>
</resources>